// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly InputBar 1`] = `
<View
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
    }
  }
>
  <View
    style={
      [
        {
          "paddingHorizontal": 12,
          "paddingTop": 4,
        },
        undefined,
        {
          "backgroundColor": "#FFFFFF",
        },
      ]
    }
  >
    <LinearGradient
      colors={
        [
          "rgba(255, 255, 255, 0)",
          "rgba(255, 255, 255, 0.9)",
        ]
      }
      end={
        {
          "x": 0,
          "y": 1,
        }
      }
      pointerEvents="none"
      start={
        {
          "x": 0,
          "y": 0,
        }
      }
      style={
        {
          "height": 10,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": -10,
        }
      }
    />
    <View
      style={
        [
          {
            "borderRadius": 16,
            "flexDirection": "column",
            "paddingHorizontal": 16,
            "paddingVertical": 8,
          },
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#e1e1e1",
            "borderWidth": 1,
          },
        ]
      }
    >
      <TextInput
        multiline={true}
        onChangeText={[Function]}
        placeholder="components.inputBar.placeholder"
        placeholderTextColor="#999"
        style={
          [
            {
              "flex": 1,
              "fontSize": 16,
              "maxHeight": 100,
              "paddingRight": 6,
              "paddingTop": 8,
              "paddingVertical": 16,
            },
            {
              "color": "#000000",
            },
          ]
        }
        value=""
      />
      <View
        style={
          {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingBottom": 8,
          }
        }
      >
        <View
          style={
            {
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              {
                "alignSelf": "center",
                "flexDirection": "row",
              }
            }
          />
          <IconButton
            accessibilityLabel="components.inputBar.voiceAssistant"
            backgroundColor="#ebebeb"
            color="#000000"
            icon={
              {
                "androidIconName": "graphic_eq",
                "iosIconName": "waveform",
              }
            }
            onPress={[Function]}
            size={20}
          />
        </View>
        <IconButton
          backgroundColor="#b0c1cb"
          color="#FFFFFF"
          icon={
            {
              "androidIconName": "arrow_upward",
              "iosIconName": "arrow.up",
            }
          }
          onPress={[Function]}
          size={20}
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`renders correctly InputBar when streaming 1`] = `
<View
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
    }
  }
>
  <View
    style={
      [
        {
          "paddingHorizontal": 12,
          "paddingTop": 4,
        },
        undefined,
        {
          "backgroundColor": "#FFFFFF",
        },
      ]
    }
  >
    <LinearGradient
      colors={
        [
          "rgba(255, 255, 255, 0)",
          "rgba(255, 255, 255, 0.9)",
        ]
      }
      end={
        {
          "x": 0,
          "y": 1,
        }
      }
      pointerEvents="none"
      start={
        {
          "x": 0,
          "y": 0,
        }
      }
      style={
        {
          "height": 10,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": -10,
        }
      }
    />
    <View
      style={
        [
          {
            "borderRadius": 16,
            "flexDirection": "column",
            "paddingHorizontal": 16,
            "paddingVertical": 8,
          },
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#e1e1e1",
            "borderWidth": 1,
          },
        ]
      }
    >
      <TextInput
        multiline={true}
        onChangeText={[Function]}
        placeholder="components.inputBar.placeholder"
        placeholderTextColor="#999"
        style={
          [
            {
              "flex": 1,
              "fontSize": 16,
              "maxHeight": 100,
              "paddingRight": 6,
              "paddingTop": 8,
              "paddingVertical": 16,
            },
            {
              "color": "#000000",
            },
          ]
        }
        value=""
      />
      <View
        style={
          {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingBottom": 8,
          }
        }
      >
        <View
          style={
            {
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              {
                "alignSelf": "center",
                "flexDirection": "row",
              }
            }
          />
          <IconButton
            accessibilityLabel="components.inputBar.voiceAssistant"
            backgroundColor="#ebebeb"
            color="#000000"
            icon={
              {
                "androidIconName": "graphic_eq",
                "iosIconName": "waveform",
              }
            }
            onPress={[Function]}
            size={20}
          />
        </View>
        <IconButton
          backgroundColor="#ebebeb"
          color="#000000"
          icon={
            {
              "androidIconName": "stop",
              "iosIconName": "stop",
            }
          }
          onPress={[Function]}
          size={20}
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`renders correctly InputBar with value 1`] = `
<View
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
    }
  }
>
  <View
    style={
      [
        {
          "paddingHorizontal": 12,
          "paddingTop": 4,
        },
        undefined,
        {
          "backgroundColor": "#FFFFFF",
        },
      ]
    }
  >
    <LinearGradient
      colors={
        [
          "rgba(255, 255, 255, 0)",
          "rgba(255, 255, 255, 0.9)",
        ]
      }
      end={
        {
          "x": 0,
          "y": 1,
        }
      }
      pointerEvents="none"
      start={
        {
          "x": 0,
          "y": 0,
        }
      }
      style={
        {
          "height": 10,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": -10,
        }
      }
    />
    <View
      style={
        [
          {
            "borderRadius": 16,
            "flexDirection": "column",
            "paddingHorizontal": 16,
            "paddingVertical": 8,
          },
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#e1e1e1",
            "borderWidth": 1,
          },
        ]
      }
    >
      <TextInput
        multiline={true}
        onChangeText={[Function]}
        placeholder="components.inputBar.placeholder"
        placeholderTextColor="#999"
        style={
          [
            {
              "flex": 1,
              "fontSize": 16,
              "maxHeight": 100,
              "paddingRight": 6,
              "paddingTop": 8,
              "paddingVertical": 16,
            },
            {
              "color": "#000000",
            },
          ]
        }
        value="Type here"
      />
      <View
        style={
          {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingBottom": 8,
          }
        }
      >
        <View
          style={
            {
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              {
                "alignSelf": "center",
                "flexDirection": "row",
              }
            }
          />
          <IconButton
            accessibilityLabel="components.inputBar.voiceAssistant"
            backgroundColor="#ebebeb"
            color="#000000"
            icon={
              {
                "androidIconName": "graphic_eq",
                "iosIconName": "waveform",
              }
            }
            onPress={[Function]}
            size={20}
          />
        </View>
        <IconButton
          backgroundColor="#628395"
          color="#FFFFFF"
          icon={
            {
              "androidIconName": "arrow_upward",
              "iosIconName": "arrow.up",
            }
          }
          onPress={[Function]}
          size={20}
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`renders the collapsed + toggle when attachments are enabled 1`] = `
<View
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
    }
  }
>
  <View
    style={
      [
        {
          "paddingHorizontal": 12,
          "paddingTop": 4,
        },
        undefined,
        {
          "backgroundColor": "#FFFFFF",
        },
      ]
    }
  >
    <LinearGradient
      colors={
        [
          "rgba(255, 255, 255, 0)",
          "rgba(255, 255, 255, 0.9)",
        ]
      }
      end={
        {
          "x": 0,
          "y": 1,
        }
      }
      pointerEvents="none"
      start={
        {
          "x": 0,
          "y": 0,
        }
      }
      style={
        {
          "height": 10,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": -10,
        }
      }
    />
    <View
      style={
        [
          {
            "borderRadius": 16,
            "flexDirection": "column",
            "paddingHorizontal": 16,
            "paddingVertical": 8,
          },
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#e1e1e1",
            "borderWidth": 1,
          },
        ]
      }
    >
      <TextInput
        multiline={true}
        onChangeText={[Function]}
        placeholder="components.inputBar.placeholder"
        placeholderTextColor="#999"
        style={
          [
            {
              "flex": 1,
              "fontSize": 16,
              "maxHeight": 100,
              "paddingRight": 6,
              "paddingTop": 8,
              "paddingVertical": 16,
            },
            {
              "color": "#000000",
            },
          ]
        }
        value=""
      />
      <View
        style={
          {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingBottom": 8,
          }
        }
      >
        <View
          style={
            {
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              {
                "alignSelf": "center",
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                {
                  "marginRight": 8,
                }
              }
            >
              <IconButton
                accessibilityLabel="components.inputBar.attach"
                backgroundColor="#ebebeb"
                color="#000000"
                icon={
                  {
                    "androidIconName": "add",
                    "iosIconName": "plus",
                  }
                }
                onPress={[Function]}
                size={20}
              />
            </View>
          </View>
          <IconButton
            accessibilityLabel="components.inputBar.voiceAssistant"
            backgroundColor="#ebebeb"
            color="#000000"
            icon={
              {
                "androidIconName": "graphic_eq",
                "iosIconName": "waveform",
              }
            }
            onPress={[Function]}
            size={20}
          />
        </View>
        <IconButton
          backgroundColor="#b0c1cb"
          color="#FFFFFF"
          icon={
            {
              "androidIconName": "arrow_upward",
              "iosIconName": "arrow.up",
            }
          }
          onPress={[Function]}
          size={20}
        />
      </View>
    </View>
  </View>
</View>
`;
